highlight theme, block groups

--- a/css/theme/esri.css
+++ b/css/theme/esri.css
@@ -145,5 +145,55 @@ body {
 .reveal .slide-number {
   color: white; }
 
+/*********************************************
+ * CODE
+ *********************************************/
+.reveal pre code {
+  padding: 15px 36px;
+  background: #f1efee;
+  color: #68615e; }
+
 pre {
-  tab-sizing: 1; }
+  tab-size: 2; }
+
+/*********************************************
+ * BLOCK GROUPS
+ *********************************************/
+.block-group {
+  font-family: monospace;
+  letter-spacing: -.65em;
+  margin-left: -1em;
+  margin-right: -1em;
+  text-align: left;
+  display: block; }
+  .block-group.center {
+    text-align: center; }
+
+.block {
+  position: relative;
+  display: inline-block;
+  float: none;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-left: 1em;
+  padding-right: 1em;
+  font-family: "Avenir LT W01 35 Light", sans-serif;
+  letter-spacing: normal;
+  text-align: left;
+  vertical-align: top; }
+
+.block-group-1-up .block {
+  width: 100%; }
+
+.block-group-2-up .block {
+  width: 50%; }
+
+.block-group-3-up .block {
+  width: 33.33333%; }
+
+.block-group-4-up .block {
+  width: 25%; }
+
+.block-group-5-up .block {
+  width: 20%; }
